[package]
name = "solana-farm-rpc"
version = "0.0.1"
description = "Solana Farm RPC"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
debug = []

[dependencies]
log = "0.4.14"
bs58 = "0.4.0"
clap = "2.33.3"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
reqwest = "0.11.6"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
serde_yaml = "0.8.21"
solana-client = { git = "https://github.com/1111-1993/solana.git" }
solana-logger = { git = "https://github.com/1111-1993/solana.git" }
solana-version = { git = "https://github.com/1111-1993/solana.git" }
solana-clap-utils = { git = "https://github.com/1111-1993/solana.git" }
solana-sdk = { git = "https://github.com/1111-1993/solana.git" }
solana-farm-sdk = { path = "../farm-sdk" }
solana-farm-client = { path = "../farm-client" }
solana-account-decoder = { git = "https://github.com/1111-1993/solana.git" }
url = "2.2.2"
