[package]
name = "solana-farm-router-orca"
version = "0.0.1"
description = "Solana Farm Orca Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
solana-program = { git = "https://github.com/1111-1993/solana.git" }
arrayref = "0.3.6"
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.10.15"

[lib]
crate-type = ["cdylib", "lib"]

