[package]
name = "solana-farm-router-raydium"
version = "0.0.1"
description = "Solana Farm Raydium Router"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
debug = []

[dependencies]
solana-farm-sdk = { path = "../farm-sdk" }
solana-program = { git = "https://github.com/1111-1993/solana.git" }
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = { git = "https://github.com/1111-1993/solana.git" }

[lib]
crate-type = ["cdylib", "lib"]

