[package]
name = "spl-feature-proposal"
version = "1.0.0"
description = "Solana Program Library Feature Proposal Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
solana-program = { git = "https://github.com/1111-1993/solana.git" }
spl-token = { version = "3.3", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = { git = "https://github.com/1111-1993/solana.git" }
solana-sdk = { git = "https://github.com/1111-1993/solana.git" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
