[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL Token Lending CLI"
edition = "2018"
homepage = "https://spl.solana.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = "4.0.4"
solana-clap-utils = { git = "https://github.com/1111-1993/solana.git" }
solana-cli-config = { git = "https://github.com/1111-1993/solana.git" }
solana-client = { git = "https://github.com/1111-1993/solana.git" }
solana-logger = { git = "https://github.com/1111-1993/solana.git" }
solana-sdk = { git = "https://github.com/1111-1993/solana.git" }
solana-program = { git = "https://github.com/1111-1993/solana.git" }
spl-token-lending = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3", path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
