[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-Token 2022 Integration Tests"
edition = "2018"
license = "Apache-2.0"
name = "spl-token-2022-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-bpf = []

[build-dependencies]
walkdir = "2"

[dev-dependencies]
async-trait = "0.1"
solana-program = { git = "https://github.com/1111-1993/solana.git" }
solana-program-test = { git = "https://github.com/1111-1993/solana.git" }
solana-sdk = { git = "https://github.com/1111-1993/solana.git" }
spl-associated-token-account = { version = "1.0.5", path = "../../associated-token-account/program" }
spl-memo = { version = "3.0.1", path = "../../memo/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.3", path="../program-2022", features = ["no-entrypoint"] }
spl-token-client = { version = "0.1.0", path = "../client" }
