[package]
name = "spl-example-transfer-weis"
version = "1.0.0"
description = "Solana Program Library Transfer Weis Example"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = { git = "https://github.com/1111-1993/solana.git" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/1111-1993/solana.git" }
solana-sdk = { git = "https://github.com/1111-1993/solana.git" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
